// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NavigationBarItem component NavigationBarItem mobile snapshot test should render correctly 1`] = `
<div
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-flexDirection-eqz5dr"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  style={
    {
      "transitionDuration": "0s",
    }
  }
  tabIndex="0"
>
  <div
    className="css-view-g5y9jx r-flexDirection-18u37iz r-alignItems-1awozwy r-height-1ugchlj r-justifyContent-1777fci r-marginLeft-1ow6zhx r-marginRight-88pszg r-marginTop-1t01tom"
    dir={null}
  >
    <div
      className="css-text-146c3p1"
      dir="auto"
      style={
        {
          "color": "rgba(255,255,255,1.00)",
          "fontFamily": "Roboto-Regular",
          "fontSize": "14px",
          "letterSpacing": "0.32px",
          "lineHeight": "22px",
        }
      }
    >
      [missing "en." translation]
    </div>
  </div>
  <div
    className="css-view-g5y9jx r-backgroundColor-1niwhzg r-height-hdaws3 r-width-13qz1uu"
    dir={null}
  />
</div>
`;

exports[`NavigationBarItem component NavigationBarItem web snapshot test should render correctly 1`] = `
<div
  className="css-view-g5y9jx r-transitionProperty-1i6wzkk r-userSelect-lrvibr r-cursor-1loqt21 r-touchAction-1otgn73 r-flex-13awgt0 r-flexDirection-eqz5dr r-marginRight-1b7u577"
  dir={null}
  onClick={[Function]}
  onContextMenu={[Function]}
  onKeyDown={[Function]}
  style={
    {
      "transitionDuration": "0s",
    }
  }
  tabIndex="0"
>
  <div
    className="css-view-g5y9jx r-flexDirection-18u37iz r-alignItems-1awozwy r-height-1ugchlj r-justifyContent-1777fci r-marginLeft-6uxfom r-marginRight-mbgqwd"
    dir={null}
  >
    <div
      className="css-text-146c3p1"
      dir="auto"
      style={
        {
          "color": "rgba(138,148,166,1.00)",
          "fontFamily": "Roboto-Regular",
          "fontSize": "14px",
          "letterSpacing": "0.32px",
          "lineHeight": "22px",
        }
      }
    >
      [missing "en." translation]
    </div>
  </div>
  <div
    className="css-view-g5y9jx r-backgroundColor-1niwhzg r-height-hdaws3 r-width-13qz1uu"
    dir={null}
  />
</div>
`;
